# ChangeLog for gnome-base/gconf
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.204 2009/04/12 20:41:22 bluebird Exp $

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> gconf-2.24.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gconf-2.24.0.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> gconf-2.24.0.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-2.24.0.ebuild:
  Marking gconf-2.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-2.24.0.ebuild:
  Marking gconf-2.24.0 ppc64 stable for bug 260063

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gconf-2.22.0.ebuild:
  Marking gconf-2.22.0 ppc64 stable for bug 236971

*gconf-2.24.0 (20 Oct 2008)

  20 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gconf-2.24.0-automagic-ldap.patch,
  +files/gconf-2.24.0-no-gconfd.patch, +gconf-2.24.0.ebuild:
  New version for GNOME 2.24. Integrates with dbus, optional policykit
  support.

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> gconf-2.22.0.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> gconf-2.22.0.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> gconf-2.22.0.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> gconf-2.22.0.ebuild:
  Marking gconf-2.22.0 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> gconf-2.22.0.ebuild:
  Stable on amd64, bug #229709

  07 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org> gconf-2.22.0.ebuild:
  revert errorneous commit, fix bug #193442.

  18 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gconf-2.18.0.1.ebuild, gconf-2.22.0.ebuild: