@@ -6,8 +6,10 @@ AUX gconf-2.24.0-no-gconfd.patch 787 RMD160 bbcd0e1dd0f49053522e703c33a9befb392b
 DIST GConf-2.20.1.tar.bz2 1404919 RMD160 743bee341731402e5d4938ee030adf4f463d9a52 SHA1 c628e2645a91b15749f1ebacc62ea685cbfa681c SHA256 0fb446b87e71fe1089f43e671b5b7689ec91d781b5b2e8f0fc72d4a83a014838
 DIST GConf-2.22.0.tar.bz2 1416685 RMD160 71f0c6f20882681efdffc957f6d86affd4a29a80 SHA1 2a9ca649ef58394e425a030dc99b863b499a8a56 SHA256 54e40cf047eb431cdf994f763ae840107ed6e9b8f9521b2b2eb07c7a55f92ce0
 DIST GConf-2.24.0.tar.bz2 1467817 RMD160 b4016275e9dffa248620303bc2241f6c0081be06 SHA1 e93ff2609c0278075acabdf609f42aa406e20c8e SHA256 990003904ee13b2fd98a61d55fa4d0fcb30fb233454a036bb9465f42d1acbb1b
+DIST GConf-2.26.0.tar.bz2 1490741 RMD160 0673a347b42519f411a7ba247aad12e8249f754d SHA1 317fd4504cc4104b7b914326cbb3b73d61234b4c SHA256 2b9fe741f84d78d7c4f18835728facce81f7db656c2c37f669ee61785911da10
 EBUILD gconf-2.20.1-r1.ebuild 2272 RMD160 0f97c149f606c5c3f6b1ea658fe4adf67c7c7b89 SHA1 aa2d61152b92b6ef50c578b35c28aa2d23529c72 SHA256 c8e080368ad4ed87d17c864a28fe26bdcbf0cda408aa1efe49158666c8eb491f
 EBUILD gconf-2.22.0.ebuild 2066 RMD160 93022e733504a0bfd70ab4c87760e889806f480e SHA1 f8ba5ab1b33a3311008458fa295e837a46e5d43d SHA256 0dad54493a84b2c2eca6f503637544cd0b00fabfbf45d632228e871beba96ead
 EBUILD gconf-2.24.0.ebuild 2335 RMD160 0031063bbf29420fd74bc003358f3b8fb1aa028b SHA1 915550ffd9da3c1d64af2368058528028c3d72ae SHA256 e01da80f9285a3805c091ed1ca2d48cf33b683628107b0917c035e5751fdeee3
-MISC ChangeLog 26528 RMD160 1cffac31c88dac9494af4097729c2ca4fe667772 SHA1 249c6ceb070a89784d98f660b51d158532971065 SHA256 0d6bc0d3fd93008cb97621b7d7e991d3cb16a0633ef03ae187087645748e0729
+EBUILD gconf-2.26.0.ebuild 2386 RMD160 969706c01d3cd5ae2685e7447a9244c2da768232 SHA1 7ba1974ed850c391d12474661ad2d29745583b0b SHA256 af0bf5d5266948ee7aa9abc2a0f2cf68d43f52ceadff583ac7c5f6698304c685
+MISC ChangeLog 26773 RMD160 effce7b854e749e9f033febcdc865f7f3b7e5e7a SHA1 a8cc183a0a35639459b204007baf3815de657cac SHA256 7cfde051d105718b70f87af7fc5a482a12f325b0284edafffb75bf520d5b3bbb
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
