@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gconf
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.204 2009/04/12 20:41:22 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.205 2009/04/19 07:26:06 leio Exp $
+
+*gconf-2.26.0 (19 Apr 2009)
+
+  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> +gconf-2.26.0.ebuild:
+  New version: --toggle and --search-key-regexp support in gconftool-2; size
+  and parsing speed improvements in saved gconf setting trees; bug fixes
 
   12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> gconf-2.24.0.ebuild:
   Stable on sparc, bug #260063
